Main layout start
Jag har börjat jobba på hemsidan och börjat fixa layout för main-sidan.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ArtisticAllure</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    nfjgfjgfjgfgj
+    <div id="container">
+        <header id="house">
+            <p>Header</p>
+        </header>
+        <nav>
+            <h2>Menu (nav)</h2>
+            <h4>Browse Art</h4>
+            <h4>Buy Art</h4>
+        </nav>
+        <section>
+            <h1 id="bigtitle">Artistic Allure</h1>
+        </section>
+        <footer>
+            <p>About us</p>
+            <p>Contact</p>
+        </footer>
+    </div>
 </body>
 </html>
