--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             <p>Header</p>
         </header>
         <nav>
-            <h2>Menu (nav)</h2>
-            <h4>Browse Art</h4>
-            <h4>Buy Art</h4>
+            <a href="browse_art.html" >Browse Art</a>
+            <a>Buy Art</a>
+            <a id="button">Sell Art</a>
         </nav>
-        <section>
+        <section id="bigsection">
             <h1 id="bigtitle">Artistic Allure</h1>
         </section>
         <footer>
-            <p>About us</p>
+            <a href="about_us.html">About us</a>
             <p>Contact</p>
         </footer>
     </div>
