--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtisticAllure</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
     <div id="container">
-        <header id="house">
-            <p>Header</p>
+        <header>
+            <h1>Artistic Allure</h1>
         </header>
         <nav>
-            <a href="browse_art.html" >Browse Art</a>
-            <a>Buy Art</a>
-            <a id="button">Sell Art</a>
+            <a href="browse_art.html">Browse Art</a>
+            <a href="wrong.html" target="_blank">Buy Art</a>
+            <a href="wrong.html" target="_blank">Sell Art</a>
         </nav>
         <section id="bigsection">
-            <h1 id="bigtitle">Artistic Allure</h1>
+            <h2 id="bigtitle">a world of art at your fingertips</h2>
         </section>
         <footer>
             <a href="about_us.html">About us</a>
-            <p>Contact</p>
+            <a href="wrong.html" target="_blank">Contact</a>
         </footer>
     </div>
 </body>
