--- a/browse_art.html
+++ b/browse_art.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArtisticAllure</title>
+    <title>Browse Art</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Browse Art</h1>
+    <div id="browse">
+        <h1>Browse Art</h1>
+        
+
+
+    </div>
+    
 </body>
