--- a/wrong.html
+++ b/wrong.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Error</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>About Us</h1>
+    <p>error.</p>
+    <p>jag orkar inte mer</p>
 </body>
