--- a/about_us.html
+++ b/about_us.html
@@ -19,16 +19,15 @@
             <a href="wrong.html" target="_blank">Buy Art</a>
             <a href="wrong.html" target="_blank">Sell Art</a>
         </nav>
-        <section>
-            <h1>About Us</h1>
-            <div class="info">
-                <img src="img/about_us.jpg" alt="Picture of founder">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-            </div>
+        <section class="info">
+            <h1 id="title">About Us</h1>
+            <p id="cambria">År 2013, i en liten ateljé i Florens, föddes idén till Artistic Allure. Konstnären Elena Moretti kände sig frustrerad över hur svårt det var för samtida konstnärer att nå ut utan att kompromissa med sin kreativitet. Hon drömde om en plattform där konstnärer kunde sälja sina verk, samarbeta internationellt och dela sina berättelser. Tillsammans med sin barndomsvän Maxime Dufresne, en fransk techentreprenör, tog hon de första stegen. De hyrde ett litet kontor i Paris och skapade en digital plattform som fungerade som både galleri och community. Deras första utställning, en pop-up i Montmartre, blev en succé och visade att idén hade potential. Artistic Allure växte snabbt. De introducerade "Art-on-Demand", där kunder kunde beställa skräddarsydda verk, och anordnade den årliga festivalen Artistic Allure Live, som blev en mötesplats för kreativa från hela världen. De tog även steget in i teknikens värld med VR-gallerier och en app för att visualisera konstverk hemma. Idag representerar Artistic Allure över 10 000 konstnärer från 120 länder och har blivit ett globalt centrum för konst och innovation. Från Florens till världen är företaget ett levande bevis på kraften i kreativitet, gemenskap och drömmar.</p>
+            <img src="img/about_us.jpg" alt="Picture of founder" id="founder">
         </section>
         <footer>
             <a href="about_us.html">About us</a>
             <a href="wrong.html" target="_blank">Contact</a>
+            <a href="wrong.html" target="_blank">Sign up</a>
         </footer>
     </div>
 </body>
