--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <footer>
             <a href="about_us.html">About us</a>
             <a href="wrong.html" target="_blank">Contact</a>
+            <a href="wrong.html" target="_blank">Sign up</a>
         </footer>
     </div>
 </body>
