--- a/browse_art.html
+++ b/browse_art.html
@@ -15,7 +15,7 @@
             <a href="index.html">Artistic Allure</a>
         </header>
         <nav>
-            <a href="browse_art.html" id="browse">Browse Art</a>
+            <a href="browse_art.html">Browse Art</a>
             <a href="wrong.html" target="_blank">Buy Art</a>
             <a href="wrong.html" target="_blank">Sell Art</a>
         </nav>
@@ -65,6 +65,7 @@
         <footer>
             <a href="about_us.html">About us</a>
             <a href="wrong.html" target="_blank">Contact</a>
+            <a href="wrong.html" target="_blank">Sign up</a>
         </footer>
 
     </div>
